<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my Gui</string>
    <string name="ButtonText">Click Here</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="TextHint">Type Here</string>
    <string name="ToastMessage">Here is more information</string>
    <string name="email" translatable="false">sharedpreferences.email</string>
    <string name="password" translatable="false">sharedpreferences.password</string>
    <string name="nameText">Your Name:</string>
    <string name="profileText">Your Profile</string>
    <string name="nameEdit">Enter your name</string>
    <string name="emailEdit">Enter your email</string>
    <string name="pictureText">Your picture:</string>
    <string name="clickBtnText">Click the button above to take a picture</string>
    <string name="emailText">Enter your email address</string>
    <string name="passwordText">Enter your password</string>
    <string name="loginButton">Login</string>
    <string name="emailEdit2">Your email:</string>
    <string name="chatRoomBtn">Chat Room</string>
    <string name="messageEditText">Type Here</string>
    <string name="sendBtnText">Send</string>
    <string name="receiveBtnText">Receive</string>
    <string name="receiveMessage" translatable="false">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Proin ante est, ullamcorper id nulla eu.</string>
    <string name="sendMessage" translatable="false">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Proin ante est, ullamcorper id nulla eu.</string>
    <string name="receiverName" translatable="false">Luke</string>
    <string name="senderName" translatable="false">Ryan</string>
    <string name="weatherBtn">Weather</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
</resources>