<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_rowSpan="4"
    android:layout_gravity="fill"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:layout_row="0"
        android:layout_column="0"
        android:orientation="vertical"
        android:text="@string/hello_message"
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:text="@string/ButtonText"
   />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_weight="1"
        android:text="@string/CheckBoxText"
/>

    <ImageButton
        android:layout_width="173dp"
        android:layout_height="77dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_weight="1"
        android:src="@drawable/flag"
/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="141dp"
        android:layout_height="11dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_weight="1"
        android:text="@string/SwitchText" />

    <EditText
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/TextHint"
        android:inputType="textPersonName|textCapWords" />

</GridLayout>